Revert "fix: increase bullet icon size in mixins for better visibility"
This reverts commit 98213bbbc30cf6e09100543d1d3a778258306cf8.

--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -666,8 +666,8 @@
     position: absolute;
     left: 0;
     top: 2px;
-    width: 28px;
-    height: 28px;
+    width: 24px;
+    height: 24px;
     background-image: url("../../assets/img/bullet-alt.svg");
     background-size: contain;
     background-repeat: no-repeat;
